--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.4.19",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "sweetalert2": "^11.10.4"
   },
   "devDependencies": {
@@ -24,6 +25,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
