--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8181",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p",
     "lint": "next lint"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.18.1",
     "@tanstack/react-query-devtools": "^5.18.1",
+    "axios": "^1.6.7",
     "next": "13.4.19",
+    "nextjs-toploader": "^1.6.6",
+    "nookies": "^2.5.2",
+    "primereact": "^10.4.0",
     "react": "^18",
+    "react-aria-components": "^1.0.1",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "sweetalert2": "^11.10.4"
