--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "dev": "next dev -p 8181",
     "build": "next build",
-    "start": "next start -p",
+    "start": "next start -p 8181",
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@tanstack/react-query": "^5.18.1",
     "@tanstack/react-query-devtools": "^5.18.1",
     "axios": "^1.6.7",
@@ -20,7 +21,9 @@
     "react-aria-components": "^1.0.1",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "sweetalert2": "^11.10.4"
+    "sharp": "^0.33.2",
+    "sweetalert2": "^11.10.4",
+    "tailwindcss-react-aria-components": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -33,6 +36,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
