--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.18",
+    "@mui/material": "^5.15.9",
     "@tanstack/react-query": "^5.18.1",
     "@tanstack/react-query-devtools": "^5.18.1",
     "axios": "^1.6.7",
+    "moment": "^2.30.1",
     "next": "13.4.19",
     "nextjs-toploader": "^1.6.6",
     "nookies": "^2.5.2",
